--- a/src/Makefile
+++ b/src/Makefile
@@ -4,8 +4,8 @@ BUILDDIR=../build/
 
 all : des
 
-des : des_shifr.o dynamic.o input.o des_block.o matrix.o des_IP_FP.o
-	$(CC) $(CFLAGS) des_shifr.o dynamic.o input.o des_block.o matrix.o des_IP_FP.o -o $(BUILDDIR)des
+des : des_shifr.o dynamic.o input.o des_block.o matrix.o des_IP_FP.o des_blocksplit_64_32.o
+	$(CC) $(CFLAGS) des_shifr.o dynamic.o input.o des_block.o matrix.o des_IP_FP.o des_blocksplit_64_32.o -o $(BUILDDIR)des
 
 des_shifr.o : des_shifr/des_shifr.c des_shifr/des_shifr.h
 	$(CC) $(CFLAGS) -c des_shifr/des_shifr.c -o des_shifr.o
@@ -24,6 +24,9 @@ matrix.o : matrix/matrix.c matrix/matrix.h
 
 des_IP_FP.o : des_shifr/des_IP_FP.c des_shifr/des_IP_FP.h
 	$(CC) $(CFLAGS) -c des_shifr/des_IP_FP.c -o des_IP_FP.o
+
+des_blocksplit_64_32.o : des_shifr/des_blocksplit_64_32.c des_shifr/des_blocksplit_64_32.h
+	$(CC) $(CFLAGS) -c des_shifr/des_blocksplit_64_32.c -o des_blocksplit_64_32.o
 
 clean :
 	rm -rf *.o
