--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "cstdlib": "c",
         "feistel_cipher.h": "c",
         "split_and_print.h": "c",
-        "des_shifr.h": "c"
+        "des_shifr.h": "c",
+        "matrix.h": "c",
+        "stdlib.h": "c"
     }
 }
